NEXT-632 - added component MediaPreview

--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -39,10 +39,11 @@
 
         .sw-media-grid-item__preview {
             display: block;
-            min-width: 100%;
+            width: 100%;
+            height: 100%;
         }
 
-        .sw-media-grid-item__preview:before {
+        .sw-media-grid-item__preview:after {
             content: "";
             display: block;
             padding-bottom: @sw-media-grid-item-preview-aspect-ratio;
