--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -1,5 +1,6 @@
 {% block sw_media_grid_item_preview %}
-    <img :src="item.extensions.links.url" class="sw-media-grid-item__image-preview">
+    <sw-media-preview :item="item">
+    </sw-media-preview>
 {% endblock %}
 
 {% block sw_media_grid_item_name %}
