NEXT-668 - Add multicolor icon set, refactor component, support size without unit

--- a/Resources/administration/src/app/component/base/sw-icon/sw-icon.html.twig
+++ b/Resources/administration/src/app/component/base/sw-icon/sw-icon.html.twig
@@ -1,7 +1,7 @@
 {% block sw_icon %}
     <svg class="sw-icon"
-         :class="[iconNamePrefix + name, iconClasses]"
-         :style="[iconSize, iconColor]"
+         :class="iconClasses"
+         :style="iconStyles"
          :aria-hidden="decorative">
         {% block sw_icon_inner %}
             {% block sw_icon_title %}
