--- a/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
+++ b/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
@@ -28,8 +28,8 @@
 
                 {% block sw_tree_item_element_grip %}
                     <div class="sw-tree-item__icon">
-                        <sw-icon name="default-documentation-map-open" small v-if="opened"></sw-icon>
-                        <sw-icon name="default-documentation-map-closed" small v-else></sw-icon>
+                        <sw-icon name="folder-tree-open" multicolor small v-if="opened"></sw-icon>
+                        <sw-icon name="folder-tree" multicolor small v-else></sw-icon>
                     </div>
                 {% endblock %}
 
