--- a/Resources/administration/src/module/sw-media/component/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
@@ -2,9 +2,9 @@
 
 {% block sw_media_grid_item_preview %}
     <sw-icon class="sw-media-grid-item__catalog-item"
-        name="default-package-closed"
-        color="#FF85C2"
-        size="50%">
+        name="folder-thumbnail"
+        multicolor
+        size="64px">
     </sw-icon>
 {% endblock %}
 
