NEXT-622: add media items to global search
media Items are searchable now
from inside the catalogue view of the media manager a list search for
all media items inside that catalogue is possible
fix a problem in the search bar, that the search result overlay will
disappear after a click outside of that container

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -1,6 +1,12 @@
 {% block sw_media_catalog %}
     <sw-page class="sw-media-catalog">
 
+        {% block sw_order_list_search_bar_type %}
+            <template slot="search-bar-type">
+                {{ $tc('sw-media.general.mainMenuItemGeneral') }}:
+            </template>
+        {% endblock %}
+
         {% block sw_media_catalog_smart_bar %}
             <template slot="smart-bar-actions">
 
