--- a/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -66,5 +66,27 @@
                 {% endblock %}
             </router-link>
         {% endblock %}
+
+        {% block sw_search_bar_item_media %}
+        <router-link v-else-if="item.type === 'media'"
+                     class="sw-search-bar-item__link"
+                     :to="{ name: 'sw.media.index', query: { mediaId: item.entity.id } }">
+            {% block sw_search_bar_item_media_icon %}
+            <sw-icon name="default-object-image" size="20px" color="#FFD700"></sw-icon>
+            {% endblock %}
+
+            {% block sw_search_bar_item_media_label %}
+            <span class="sw-search-bar-item__label">
+                        {{ item.entity.name }}
+                    </span>
+            {% endblock %}
+
+            {% block sw_search_bar_item_media_type %}
+            <span class="sw-search-bar-item__type">
+                        {{ $tc('global.sw-search-bar-item.typeLabelMedia') }}
+                    </span>
+            {% endblock %}
+        </router-link>
+        {% endblock %}
     </li>
 {% endblock %}
