--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -23,18 +23,21 @@
                                 {% endblock %}
                             {% endblock %}
 
-                            {% block sw_media_index_last_added_items %}
-                                {% block sw_media_index_last_added_items_title %}
-                                    <h3>{{ $tc('sw-media.index.lastAdded') }}</h3>
+                            {% block sw_media_index_items %}
+                                {% block sw_media_index_items_title %}
+                                    <h3 v-if="!isSearch">{{ $tc('sw-media.index.lastAdded') }}</h3>
+                                {% endblock %}
+                                {% block sw_media_index_searched_item_title %}
+                                    <h3 v-if="isSearch">{{ $tc('sw-media.index.searchResult') }}</h3>
                                 {% endblock %}
 
-                                {% block sw_media_index_last_added_items_grid %}
+                                {% block sw_media_index_items_grid %}
                                     <sw-media-grid previewType="media-grid-preview-as-grid"
                                            previewComponent="sw-media-grid-media-item"
                                            :editable="true"
                                            :selectable="true"
-                                           :items="lastAddedMediaItems"
-                                           ref="gridLastAdded"
+                                           :items="mediaItems"
+                                           ref="mediaGrid"
                                            v-on="mediaMediaGridListener">
                                     </sw-media-grid>
                                 {% endblock %}
