NEXT-628 Refactored the handling of assets for a more generic build

--- a/Resources/administration/src/module/sw-login/page/index/sw-login.less
+++ b/Resources/administration/src/module/sw-login/page/index/sw-login.less
@@ -120,7 +120,7 @@
         display: flex;
         flex-direction: row;
         overflow: hidden;
-        background: lighten(@sw-login-color-background, 10%) url('~assets/img/sw-login-background.png') center center;
+        background: lighten(@sw-login-color-background, 10%) url('../img/sw-login-background.png') center center;
         background-size: cover;
         opacity: 1;
         transition: opacity @sw-login-success-animation-duration ease-in-out,
