--- a/Resources/administration/src/module/sw-sales-channel/page/sw-sales-channel-detail/sw-sales-channel-detail.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/page/sw-sales-channel-detail/sw-sales-channel-detail.html.twig
@@ -32,11 +32,7 @@
                 {% endblock %}
 
                 {% block sw_sales_channel_detail_content_view %}
-                    <router-view :salesChannel="salesChannel"
-                                 :shippingMethods="shippingMethods"
-                                 :paymentMethods="paymentMethods"
-                                 :countries="countries">
-                    </router-view>
+                    <router-view :salesChannel="salesChannel"></router-view>
                 {% endblock %}
             </sw-card-view>
         {% endblock %}
