--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -10,7 +10,8 @@
     }
 
     .sw-media-index__content {
-        padding: 0 20px;
+        padding-left: 20px;
+        padding-top: 30px;
         justify-self: stretch;
         overflow-x: hidden;
         overflow-y: auto;
