--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -4,6 +4,7 @@
     .sw-media-catalog__page-content {
         display: grid;
         position: absolute;
+        padding-left: 10px;
         height: 100%;
         width: 100%;
         grid-template-columns: auto 64px;
@@ -17,18 +18,9 @@
 
     .sw-media-catalog__content {
         display: grid;
-        grid-template-rows: 70px auto 64px;
         position:absolute;
         height: 100%;
         width: 100%;
-    }
-
-    .sw-media-catalog__display-options-bar {
-        display: grid;
-        width: 100%;
-        height: 70px;
-        align-items: center;
-        justify-items: end;
     }
 
     .sw-media-catalog__media-grid {
