NEXT-482: add selection modes for media grid
single click opens the quickinfos
click on the checkbox or click + ctrl-key starts selection mode
list select wit pressed shift-key

--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -15,7 +15,8 @@
                                 :selected="isItemSelected(item)"
                                 :item="item"
                                 :containerOptions="containerOptions"
-                                @sw-media-grid-item-selection-add="addToSelection"
+                                @sw-media-grid-item-selection-add="handleSelection"
+                                @sw-media-grid-item-clicked="handleClick"
                                 @sw-media-grid-item-selection-remove="removeFromSelection"
                                 v-on="$listeners">
                             </component>
