--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
@@ -8,7 +8,7 @@
                          v-if="containerOptions.selectable && !isListItemPreview">
 
                         {% block sw_media_grid_item_selected_indicator %}
-                            <sw-field type="checkbox" :value="selected"></sw-field>
+                            <sw-field type="checkbox" :value="selected" @click.self="doSelectItem"></sw-field>
                         {% endblock %}
                     </div>
                 {% endblock %}
