--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -66,7 +66,8 @@
                                                             truncate
                                                             sortable>
                                                 {% block sw_order_list_grid_columns_customer_name_label %}
-                                                    {{ item.customer.firstName }} {{ item.customer.lastName }}
+
+                                                    {{ item.orderCustomer.firstName }} {{ item.orderCustomer.lastName }}
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
