ntr - fix integration modal box styling

--- a/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
+++ b/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
@@ -30,6 +30,7 @@
                                 {% block sw_integration_list_overview_inner %}
                                     {% block sw_integration_list_detail_modal %}
                                         <sw-modal v-if="currentIntegration"
+                                                  class="sw-integration-list__detail"
                                                   :isLoading="isModalLoading"
                                                   :title="$tc('sw-integration.detail.detailModalTitle')"
                                                   @closeModal="onCloseDetailModal">
