--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.less
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.less
@@ -16,8 +16,12 @@
         margin-bottom: 20px;
     }
 
-    .sw-sales-channel-detail__action {
-        text-align: right;
+    .sw-sales-channel-detail__action-button {
+        align-self: center;
+
+        .sw-sales-channel-detail-base__button-generate-keys {
+            height: 45px;
+        }
     }
 
     .sw-field input:disabled {
