--- a/Resources/administration/src/module/sw-sales-channel/component/structure/sw-admin-menu-extension/sw-admin-menu-extension.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/component/structure/sw-admin-menu-extension/sw-admin-menu-extension.html.twig
@@ -1,4 +1,4 @@
-{% block sw_admin_menu_body %}
+{% block sw_admin_menu_navigation_main %}
     {% parent %}
 
     <sw-sales-channel-menu></sw-sales-channel-menu>
