--- a/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.less
+++ b/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.less
@@ -1,11 +1,11 @@
 @import "~less/variables";
 
 @sw-sales-channel-modal-color-text:                 @color-gutenberg;
+@sw-sales-channel-modal-color-back:                 @color-kashmir;
 @sw-sales-channel-modal-color-description-title:    @color-kashmir;
 @sw-sales-channel-modal-color-detail-name:          @color-kashmir;
 @sw-sales-channel-modal-font-size-small:            @font-size-small;
-
-
+@sw-sales-channel-modal-color-icon-background:      @color-white;
 
 .sw-sales-channel-modal {
     .sw-sales-channel-modal__back {
@@ -19,7 +19,7 @@
         line-height: 40px;
         background: 0 none;
         border: 0 none;
-        color: #798a9c;
+        color: @sw-sales-channel-modal-color-back;
         cursor: pointer;
         outline: none;
     }
@@ -103,7 +103,7 @@
         border-radius: 3px;
 
         .sw-icon{
-            background: #fff;
+            background: @sw-sales-channel-modal-color-icon-background;
             padding: 10px;
             width: 100%;
             height: 100%;
